# torch2trt

./: .gitignore  build.sh  docker.sh  run_test.sh  setup.py
examples/: int8_calibration.py
plugins/: CMakeLists.txt
plugins/plugin/: CMakeLists.txt  InferPlugin.cpp
plugins/plugin/common/: common.h  plugin.h
plugins/plugin/correlationPlugin/: correlationKernels.cu  correlationKernels.h  correlationPlugin.cpp  correlationPlugin.h
plugins/plugin/dcnV2Plugin/: dcnV2Kernels.cu  dcnV2Kernels.h  dcnV2Plugin.cpp  dcnV2Plugin.h
plugins/plugin/deformableConvPlugin/: deform_conv_cuda.cpp  deform_conv_cuda.h  deformableConvKernels.cu  modulatedDeformableConvPlugin.cpp  modulatedDeformableConvPlugin.h
plugins/plugin/gatherElementsPlugin/: gatherElementsKernels.cu  gatherElementsKernels.h  gatherElementsPlugin.cpp  gatherElementsPlugin.h
plugins/plugin/gridSamplePlugin/: gridSampleKernels.cu  gridSampleKernels.h  gridSamplePlugin.cpp  gridSamplePlugin.h
plugins/plugin/groupNormalizationPlugin/: groupNormalizationKernel.cu  groupNormalizationPlugin.cpp  groupNormalizationPlugin.h
plugins/plugin/paddingPlugin/: paddingKernels.cu  paddingKernels.h  paddingPlugin.cpp  paddingPlugin.h
torch2trt/: calibration.py  plugins.py  test.py  torch2trt.py  utils.py
torch2trt/converters/: Conv.py  ConvTranspose.py  Linear.py  __init__.py  activation.py  adaptive_avg_pool2d.py  adaptive_max_pool2d.py  add.py  and.py  argmax.py  argmin.py  avg_pool.py  batch_norm.py  cast.py  cat.py  chunk.py  clamp.py  compare.py  conv.py  conv_transpose.py  correlation.py  deformable_conv_v2.py  div.py  dummy_converters.py  elementwise.py  expand.py  gather.py  getitem.py  grid_sample.py  group_norm.py  identity.py  instance_norm.py  interpolate.py  linear.py  log_softmax.py  matmul.py  max.py  max_pool.py  mean.py  min.py  (+23 more)
torch2trt/ops/dcn/: __init__.py  build.sh  deform_conv.py  setup.py
torch2trt/ops/dcn/src/cuda/: deform_conv_cuda_kernel.cu  deform_pool_cuda_kernel.cu
torch2trt/tests/: models.py  operations.py  test.py  utils.py
torch2trt/tests/torchvision/: classification.py
